--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.data.mongodb.database=timeDining
 spring.data.mongodb.port=27117
 spring.data.mongodb.host=mongodb
 #spring.data.mongodb.host=localhost
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.data.mongodb.auto-index-creation=true
 
 api.endpoint=/api/v1
