--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=root
 spring.data.mongodb.password=admin
 spring.data.mongodb.database=timeDining
-spring.data.mongodb.port=27117
+spring.data.mongodb.port=27017
 spring.data.mongodb.host=mongodb
 #spring.data.mongodb.host=localhost
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.data.mongodb.auto-index-creation=true
 
 api.endpoint=/api/v1
